<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/purplemountains">

    <ImageButton
        android:id="@+id/planets"
        android:background="@drawable/planet"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:text="@string/planets"
        app:layout_constraintBottom_toTopOf="@+id/signs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/planets" />

    <ImageButton
        android:id="@+id/signs"
        android:background="@drawable/cancer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:text="@string/signs"
        app:layout_constraintBottom_toTopOf="@+id/houses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/signs" />

    <ImageButton
        android:id="@+id/houses"
        android:background="@drawable/house"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="30dp"
        android:text="@string/houses"
        app:layout_constraintBottom_toTopOf="@+id/aspects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/houses" />


    <ImageButton
        android:id="@+id/aspects"
        android:background="@drawable/sextile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="50dp"
        android:text="@string/aspects"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/aspects" />


</androidx.constraintlayout.widget.ConstraintLayout>